| Bug #26675 | ndb_connectstring is not reported in show global variables | ||
|---|---|---|---|
| Submitted: | 27 Feb 2007 11:14 | Modified: | 15 May 2007 8:27 |
| Reporter: | Oli Sennhauser | ||
| Status: | Closed | ||
| Category: | Server: Cluster | Severity: | S3 (Non-critical) |
| Version: | 5.1.14, 5.0 BK, 4.1 BK, 5.2-falcon | OS: | Any |
| Assigned to: | Bugs System | Target Version: | |
[27 Feb 2007 11:14]
Oli Sennhauser
[27 Feb 2007 12:31]
Sveta Smirnova
Thank you for the report. Verified as described. All versions are affected.
[6 Mar 2007 6:46]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/21207 ChangeSet@1.2389, 2007-03-06 13:40:36+00:00, lzhou@dev3-63.(none) +3 -0 BUG#26675 Add ndb_connectstring in show global variables
[12 Mar 2007 12:36]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/21703 ChangeSet@1.2389, 2007-03-12 18:08:35+00:00, lzhou@dev3-63.(none) +2 -0 BUG#26675 Add ndb_connectstring in "show global variables".
[16 Apr 2007 13:34]
Stewart Smith
looks like the change to ha_ndbcluster.h isn't needed. otherwise looks okay.
[18 Apr 2007 11:41]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/24759 ChangeSet@1.2553, 2007-04-18 17:33:00+00:00, lzhou@dev3-63.(none) +2 -0 BUG#26675 remove additional varialbes definations in mysqld.cc and add NDBCLUSTER macro in set_var.cc
[20 Apr 2007 6:45]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/24964 ChangeSet@1.2553, 2007-04-20 12:36:10+00:00, lzhou@dev3-63.(none) +2 -0 BUG#26675 remove additional varialbes definations in mysqld.cc and add NDBCLUSTER macro in set_var.cc
[9 May 2007 5:16]
Guangbao Ni
merge into mysql-5.1-ndb tree
[9 May 2007 5:18]
Guangbao Ni
merge into mysql-5.0-ndb tree
[10 May 2007 14:56]
Bugs System
Pushed into 5.0.42
[10 May 2007 14:56]
Bugs System
Pushed into 5.1.19-beta
[15 May 2007 8:27]
Jon Stephens
Thank you for your bug report. This issue has been committed to our source repository of
that product and will be incorporated into the next release.
If necessary, you can access the source repository and build the latest available version,
including the bug fix. More information about accessing the source trees is available at
http://dev.mysql.com/doc/en/installing-source.html
Documented bugfix in 5.0.42 and 5.1.19 changelogs.
[13 Jun 2007 15:34]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/28665 ChangeSet@1.2538, 2007-06-13 23:33:51+10:00, stewart@flamingspork.com +2 -0 [PATCH] Add tests for ndb variables (related to BUG#26675) This is somewhat related to BUG#26675 (ndb_connectstring not reported in show global variables) Index: ndb-work/mysql-test/r/ndb_basic.result ===================================================================
[18 Jun 2007 9:49]
Bugs System
Pushed into 5.1.20-beta
