BUG#26675 Add ndb_connectstring in "show global variables".